--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>We Design & Develop</title>
     </head>
     <body>
-        <header>
+        <header id="container">
             <div class="container">
                 <div class="row">
                     <div class="col-5 mt-5">
@@ -19,16 +20,29 @@
                     </div>
                     <div class="col-7 mt-5">
                         <nav>
-                            <ul class="d-flex nav">
-                                <li class=" nav-item active"><a class="nav-link" href="#">Home</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">About</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">Work</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">Process</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">Services</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">Testimonials</a></li>
-                                <li class=" nav-item"><a class="nav-link" href="#">Contact</a></li>
+                            <ul class="d-flex justify-content-end nav">
+                                <li class="myriad nav-item active"><a class="nav-link" href="#">Home</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">About</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">Work</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">Process</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">Services</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                <li class="myriad nav-item"><a class="nav-link" href="#">Contact</a></li>
                             </ul>
                         </nav>
+                    </div>
+                </div>
+                <div id="design" class="row">
+                    <div class="col-12">
+                        <div class="offset-6">
+                            <h1 class="monserrat">We Design and Develop</h1>
+                            <p id="new-design" class="myriad text-secondary">
+                                We are a new design studio based in USA. We have over
+                                20 years of combined experience, and know a thing or two
+                                about designing websites and mobile apps.
+                            </p>
+                            <button class="button myriad" type="button">Contact us</button>
+                        </div>
                     </div>
                 </div>
             </div>
