Add bg on main content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>We Design & Develop</title>
     </head>
     <body>
-        <header id="container">
+        <header id="container-bg">
             <div class="container">
                 <div class="row">
                     <div class="col-5 mt-5">
