--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
                 </div>
             </div>
         </header>
+        <main>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="offset-3 col-6">
+                            <h2 class="text-center monserrat">About Us</h2>
+                            <p id="about" class="text-center myriad">
+                                Divide have don't man wherein air fourth. Own itself make have night won't make.
+                                A you under Seed appear which good give. Own give air without fowl moveth dry first
+                                heaven fruit, dominion she'd won't very all.
+                            </p>
+                        </div>
+                        <div class="col-12">
+                            <img id="signature" class="offset-5" src="assets/images/signature.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
