Add skills part

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>We Design & Develop</title>
     </head>
     <body>
-        <header id="container-bg">
+        <header id="bg">
             <div class="container">
                 <div class="row">
                     <div class="col-5 mt-5">
@@ -65,6 +65,33 @@
                     </div>
                 </div>
             </section>
+            <section id="half-grey">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6">
+                            <div id="progressBar" class="col-12">
+                                <h3 id="skills" class="monserrat">Professional Skills</h3>
+                                <p class="pro-skills monserrat">ui/ux design <span class="ml-5">75%</span></p>
+                                <div class="progress-bar-grey">
+                                    <div id="ui"></div>
+                                </div>
+                                <p class="pro-skills monserrat">web developpement <span class="ml-5">90%</span></p>
+                                <div class="progress-bar-grey">
+                                    <div id="develop"></div>
+                                </div>
+                                <p class="pro-skills monserrat">marketing <span class="ml-5">65%</span></p>
+                                <div class="progress-bar-grey">
+                                    <div id="marketing"></div>
+                                </div>
+                        </div>
+                        </div>
+                        <div class="col-6">
+                            <img width="659" height="600" src="assets/images/design.jpg" alt="Photo de design">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            4564456
         </main>
         <script src="assets/js/main.js"></script>
     </body>
