--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <script src="https://kit.fontawesome.com/edd05a689b.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -91,7 +92,52 @@
                     </div>
                 </div>
             </section>
-            4564456
+            <section id="skill" class="blue-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <ul id="ul-margin" class="d-flex justify-content-between text-white">
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="fas fa-briefcase font"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="projects" class="monserrat figure-font" data-target="548">0</p>
+                                        <p class="monserrat stats-font">Projects completed</p>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-clock font"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="hours" class="monserrat figure-font" data-target="1475">0</p>
+                                        <p class="monserrat stats-font">Working Hours</p>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-star font"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="feed" class="monserrat figure-font" data-target="612">0</p>
+                                        <p class="monserrat stats-font">Positives Feedback</p>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-heart font"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="clients" class="monserrat figure-font" data-target="735">0</p>
+                                        <p class="monserrat stats-font">Happy Clients</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <script src="assets/js/main.js"></script>
     </body>
