Add works section

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 20 years of combined experience, and know a thing or two
                                 about designing websites and mobile apps.
                             </p>
-                            <button class="button myriad" type="button">Contact us</button>
+                            <button class="button-contact myriad" type="button">Contact us</button>
                         </div>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                                 <div class="progress-bar-grey">
                                     <div id="ui"></div>
                                 </div>
-                                <p class="pro-skills monserrat">web developpement <span class="ml-5">90%</span></p>
+                                <p class="pro-skills monserrat">web development <span class="ml-5">90%</span></p>
                                 <div class="progress-bar-grey">
                                     <div id="develop"></div>
                                 </div>
@@ -134,6 +134,58 @@
                                     </div>
                                 </li>
                             </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="d-flex flex-wrap">
+                    <div class="container-img">
+                        <img class="work-img" src="assets/images/photo1.png" alt="1st work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo2.png" alt="2nd work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo3.png" alt="3rd work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo4.png" alt="4th work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo5.png" alt="5th work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo6.png" alt="6th work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo7.png" alt="7th work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                    <div class="container-img">
+                        <img class="work-img" width="337" height="300" src="assets/images/photo8.png" alt="8th work">
+                        <div class="middle">
+                            <button class="button-work" type="button">View Work</button>
                         </div>
                     </div>
                 </div>
