Add process section

--- a/index.html
+++ b/index.html
@@ -143,25 +143,25 @@
                     <div class="container-img">
                         <img class="work-img" src="assets/images/photo1.png" alt="1st work">
                         <div class="middle">
-                            <button class="button-work" type="button">View Work</button>
+                            <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
                         <img class="work-img" width="337" height="300" src="assets/images/photo2.png" alt="2nd work">
                         <div class="middle">
-                            <button class="button-work" type="button">View Work</button>
+                            <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
                         <img class="work-img" width="337" height="300" src="assets/images/photo3.png" alt="3rd work">
                         <div class="middle">
-                            <button class="button-work" type="button">View Work</button>
+                            <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
                         <img class="work-img" width="337" height="300" src="assets/images/photo4.png" alt="4th work">
                         <div class="middle">
-                            <button class="button-work" type="button">View Work</button>
+                            <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
@@ -186,6 +186,36 @@
                         <img class="work-img" width="337" height="300" src="assets/images/photo8.png" alt="8th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Work</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="grey-bg">
+                <div class="container">
+                    <div class="row">
+                        <div id="load" class="col-12 d-flex justify-content-center align-items-center">
+                            <p id="load-more" class="monserrat"><a id="anchor-load" class="text-secondary nav-link" href="#">Load More Work</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 id="process" class="monserrat text-center">Our Work Process</h2>
+                        </div>
+                        <div id="processpara" class="offset-3 col-6">
+                            <p id="process-para" class="text-secondary text-center">
+                                Was years it seasons was there form he in in them together over that,
+                                third sixth gathered female creeping bearing behold years.
+                            </p>
+                        </div>
+                        <div id="video" class="col-12">
+                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+
+                            </iframe>
                         </div>
                     </div>
                 </div>
