--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>We Design & Develop</title>
     </head>
@@ -17,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-5 mt-5">
-                        <img src="assets/images/logo.png" alt="Logo de l'entreprise">
+                        <img src="assets/images/header/logo.png" alt="Logo de l'entreprise">
                     </div>
                     <div class="col-7 mt-5">
                         <nav>
@@ -61,7 +62,7 @@
                             </p>
                         </div>
                         <div class="col-12">
-                            <img id="signature" class="offset-5" src="assets/images/signature.png" alt="">
+                            <img id="signature" class="offset-5" src="assets/images/about/signature.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -87,7 +88,7 @@
                         </div>
                         </div>
                         <div class="col-6">
-                            <img width="659" height="600" src="assets/images/design.jpg" alt="Photo de design">
+                            <img width="659" height="600" src="assets/images/skill/design.jpg" alt="Photo de design">
                         </div>
                     </div>
                 </div>
@@ -141,49 +142,49 @@
             <section>
                 <div class="d-flex flex-wrap">
                     <div class="container-img">
-                        <img class="work-img" src="assets/images/photo1.png" alt="1st work">
+                        <img class="work-img" src="assets/images/work/photo1.png" alt="1st work">
                         <div class="middle">
                             <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo2.png" alt="2nd work">
+                        <img class="work-img" width="337" height="300" src="assets/images/services/photo2.png" alt="2nd work">
                         <div class="middle">
                             <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo3.png" alt="3rd work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo3.png" alt="3rd work">
                         <div class="middle">
                             <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo4.png" alt="4th work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo4.png" alt="4th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Project</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo5.png" alt="5th work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo5.png" alt="5th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Work</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo6.png" alt="6th work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo6.png" alt="6th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Work</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo7.png" alt="7th work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo7.png" alt="7th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Work</button>
                         </div>
                     </div>
                     <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/photo8.png" alt="8th work">
+                        <img class="work-img" width="337" height="300" src="assets/images/work/photo8.png" alt="8th work">
                         <div class="middle">
                             <button class="button-work" type="button">View Work</button>
                         </div>
@@ -212,10 +213,59 @@
                             </p>
                         </div>
                         <div id="video" class="col-12">
-                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-
-                            </iframe>
+<!--                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"-->
+<!--                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
+<!--                            </iframe>-->
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="grey-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 col-md-6 d-flex flex-wrap">
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/diamond.png" alt=""></div>
+                                <h3 class="services-title monserrat">UI/UX Design</h3>
+                                <p class="services-para text-secondary">Be set fourth god darkness make it wherein own</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img id="bow" class="font" src="assets/images/services/bow.png" alt=""></div>
+                                <h3 class="services-title monserrat">Web Development</h3>
+                                <p class="services-para text-secondary">A she'd bring void moving third she'd kind fill</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/plane.png" alt=""></div>
+                                <h3 class="services-title monserrat">SEO / Marketing</h3>
+                                <p class="services-para text-secondary">Give wont after land fill creeping meat you, may</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/star.png" alt=""></div>
+                                <h3 class="services-title monserrat">Photography</h3>
+                                <p class="services-para text-secondary">Creepeth one seas castle grass give morning saw give</p>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 d-flex flex-wrap">
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/phone.png" alt=""></div>
+                                <h3 class="services-title monserrat">App / Mobile</h3>
+                                <p class="services-para text-secondary">Dominion second spirit he. earth they're creeping</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/joy.png" alt=""></div>
+                                <h3 class="services-title monserrat">Game Design</h3>
+                                <p class="services-para text-secondary">Morning his saying moveth it multiply appear life be</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/magic-wand.png" alt=""></div>
+                                <h3 class="services-title monserrat">Graphic Design</h3>
+                                <p class="services-para text-secondary">Open, great whales air rules for, fourth life whales</p>
+                            </div>
+                            <div class="col-6 text-center services">
+                                <div><img src="assets/images/services/paint-bucket.png" alt=""></div>
+                                <h3 class="services-title monserrat">Illustrations</h3>
+                                <p class="services-para text-secondary">Whales likeness hath, man kind for them air two won't</p>
+                            </div>
                         </div>
                     </div>
                 </div>
