--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <script src="https://kit.fontawesome.com/edd05a689b.js" crossorigin="anonymous"></script>
+        <script defer src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
               integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -223,45 +228,45 @@
             <section class="grey-bg">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-md-6 d-flex flex-wrap">
-                            <div class="col-6 text-center services">
+                        <div class="services col-12 col-md-6 d-flex flex-wrap">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/diamond.png" alt=""></div>
                                 <h3 class="services-title monserrat">UI/UX Design</h3>
                                 <p class="services-para text-secondary">Be set fourth god darkness make it wherein own</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img id="bow" class="font" src="assets/images/services/bow.png" alt=""></div>
                                 <h3 class="services-title monserrat">Web Development</h3>
                                 <p class="services-para text-secondary">A she'd bring void moving third she'd kind fill</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/plane.png" alt=""></div>
                                 <h3 class="services-title monserrat">SEO / Marketing</h3>
                                 <p class="services-para text-secondary">Give wont after land fill creeping meat you, may</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/star.png" alt=""></div>
                                 <h3 class="services-title monserrat">Photography</h3>
                                 <p class="services-para text-secondary">Creepeth one seas castle grass give morning saw give</p>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 d-flex flex-wrap">
-                            <div class="col-6 text-center services">
+                        <div class="services col-12 col-md-6 d-flex flex-wrap">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/phone.png" alt=""></div>
                                 <h3 class="services-title monserrat">App / Mobile</h3>
                                 <p class="services-para text-secondary">Dominion second spirit he. earth they're creeping</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/joy.png" alt=""></div>
                                 <h3 class="services-title monserrat">Game Design</h3>
                                 <p class="services-para text-secondary">Morning his saying moveth it multiply appear life be</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/magic-wand.png" alt=""></div>
                                 <h3 class="services-title monserrat">Graphic Design</h3>
                                 <p class="services-para text-secondary">Open, great whales air rules for, fourth life whales</p>
                             </div>
-                            <div class="col-6 text-center services">
+                            <div class="col-6 text-center">
                                 <div><img src="assets/images/services/paint-bucket.png" alt=""></div>
                                 <h3 class="services-title monserrat">Illustrations</h3>
                                 <p class="services-para text-secondary">Whales likeness hath, man kind for them air two won't</p>
@@ -270,7 +275,57 @@
                     </div>
                 </div>
             </section>
+            <section id="testimonials" class="blue-bg carousel-sec">
+                <div id="container-carousel" class="container">
+                    <div id="row" class="row">
+                        <div class="col-12">
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="5000">
+                                <div id="carousel-inner" class="carousel-inner">
+                                    <div id="carousel-item" class="carousel-item active">
+                                        <div class="carousel-div active col-10 offset-1">
+                                            <p class="carousel-quotes monserrat text-center">
+                                                "Any fool can write code that a computer can understand. Good programmers write code that humans can
+                                                understand"</p>
+                                            <p class="text-center signature">Martin Flower</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="carousel-div col-10 offset-1">
+                                            <p class="carousel-quotes monserrat text-center">
+                                                "Outstanding job and exceeded alla expectations. It was a pleasure to work with them on a sizable first
+                                                project and am looking forward to start the next one asap."</p>
+                                            <p class="text-center signature">Michael hopkins</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="carousel-div col-10 offset-1">
+                                            <p class="carousel-quotes monserrat text-center">
+                                                "Experience is the name everyone gives to their mistakes"</p>
+                                            <p class="text-center signature">Oscar Wilde</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <ol class="carousel-indicators">
+                                    <li class="active dots" data-target="#myCarousel" data-slide-to="0"></li>
+                                    <li class="dots" data-target="#myCarousel" data-slide-to="1"></li>
+                                    <li class="dots" data-target="#myCarousel" data-slide-to="2"></li>
+                                </ol>
+                            </div>
+                            <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
