Add clients section

--- a/index.html
+++ b/index.html
@@ -323,9 +323,22 @@
                     </div>
                 </div>
             </section>
+            <section>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="client-list d-flex justify-content-md-around flex-wrap">
+                                <img src="assets/images/clients/handmade.png" alt="Logo premier client">
+                                <img src="assets/images/clients/mountain.png" alt="Logo deuxième client">
+                                <img src="assets/images/clients/collection.png" alt="Logo troisième client">
+                                <img src="assets/images/clients/vintage.png" alt="Logo quatrième client">
+                                <img src="assets/images/clients/mountainbike.png" alt="Logo cinquième client">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-                integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
