Add form section

--- a/index.html
+++ b/index.html
@@ -338,6 +338,42 @@
                     </div>
                 </div>
             </section>
+            <section class="grey-bg">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12 text-center">
+                            <div>
+                                <h2>Need a Project?</h2>
+                                <p id="agency" class="col-12 col-md-6 offset-md-3 text-secondary text-center">
+                                    Let us know what you're looking for in an agency. We'll take a look and see if this
+                                    could be the start of something beautiful
+                                </p>
+                            </div>
+                            <form id="form">
+                                <div class="form-row">
+                                   <div class="col-md-6 col-12 d-md-flex justify-content-md-end">
+                                       <div class="form-group col-md-8 col-12 d-md-flex justify-content-md-center">
+                                           <input type="text" id="first-name" class="form-control mr-md-5" placeholder="Your Name">
+                                       </div>
+                                   </div>
+                                    <div class="col-md-6 col-12 mt-5 mt-md-0 d-md-flex justify-content-md-start">
+                                        <div class="form-group col-md-8 col-12  d-md-flex justify-content-md-center">
+                                            <input type="email" id="last-name" class="form-control ml-md-5" placeholder="Your Email">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group col-12 col-md-8 offset-md-2 d-md-flex justify-content-md-center">
+                                    <input type="text" class="form-control col-12" id="title" placeholder="Your Email">
+                                </div>
+                                <div class="form-group col-12 col-md-8 offset-md-2 d-md-flex justify-content-md-center">
+                                    <textarea type="text" class="form-control col-12" id="text-area" placeholder="Your Comment"></textarea>
+                                </div>
+                                <button type="submit" class="button-contact">Send message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <script src="assets/js/main.js"></script>
     </body>
