--- a/index.html
+++ b/index.html
@@ -375,6 +375,103 @@
                 </div>
             </section>
         </main>
+        <footer class="black-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-md-6 list d-flex justify-content-between">
+                        <div>
+                            <ul>
+                                <li>
+                                    <p id="piroll" class="monserrat text-white">Piroll Design, Inc.</p>
+                                </li>
+                                <li>
+                                    <p class="text-white foot">© 2017 Piroll. All rights reserved.</p>
+                                </li>
+                                <li>
+                                    <p class="text-white foot">Designed by robirurk</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>
+                                    <p class="text-white foot">hello@pirolltheme.com</p>
+                                </li>
+                                <li>
+                                    <p class="text-white foot">+44 987 065 908</p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-1 offset-md-1 list">
+                        <div>
+                            <ul>
+                                <li>
+                                    <ul>
+                                        <li>
+                                            <p class="text-white foot">Projects</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">About</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Services</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Carrier</p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-1 offset-1 list">
+                        <div>
+                            <ul>
+                                <li>
+                                    <ul>
+                                        <li>
+                                            <p class="text-white foot">News</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Events</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Contact</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Legals</p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-1 offset-5 offset-md-1 list">
+                        <div>
+                            <ul>
+                                <li>
+                                    <ul>
+                                        <li>
+                                            <p class="text-white foot">Facebook</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Twitter</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Instagram</p>
+                                        </li>
+                                        <li>
+                                            <p class="text-white foot">Dribbble</p>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
         <script src="assets/js/main.js"></script>
     </body>
 </html>
