--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="col-7 mt-5">
                         <nav>
-                            <ul class="d-flex justify-content-end nav">
+                            <ul class="d-flex justify-content-end nav text-uppercase">
                                 <li class="monserrat font12 nav-item active"><a class="nav-link" href="#">Home</a></li>
                                 <li class="monserrat font12 nav-item"><a class="nav-link" href="#">About</a></li>
                                 <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Work</a></li>
@@ -75,12 +75,12 @@
                     </div>
                 </div>
             </section>
-            <section class="grey">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-6">
-                            <div id="progressBar" class="col-12">
-                                <h3 id="skills" class="font30 monserrat">Professional Skills</h3>
+            <section id="skill-bar" class="grey">
+                <div class="d-flex justify-content-start">
+                    <div>
+                        <div id="progressBar"  class="">
+                            <h3 id="skills" class="font30 monserrat">Professional Skills</h3>
+                            <div class="text-uppercase">
                                 <p class="pro-skills font12 monserrat">ui/ux design <span class="ml-5">75%</span></p>
                                 <div class="progress-bar-grey">
                                     <div id="ui"></div>
@@ -93,11 +93,13 @@
                                 <div class="progress-bar-grey">
                                     <div id="marketing"></div>
                                 </div>
-                        </div>
-                        </div>
-                        <div class="col-6">
-                            <img width="659" height="600" src="assets/images/skill/design.jpg" alt="Photo de design">
-                        </div>
+                            </div>
+                    </div>
+<!--                        <div id="img-container" class=" d-flex justify-content-end">-->
+<!--                            <div class="h-100">-->
+<!--                                <img id="skill-img" src="assets/images/skill/design.jpg" alt="Photo de design">-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </section>
@@ -106,45 +108,45 @@
                     <div class="row">
 <!--                        <div class="col-12">-->
                             <div class="col-12 col-md-6">
-                                <ul class="list d-flex justify-content-around text-white">
+                                <ul class="list d-flex justify-content-around text-white text-uppercase">
                                     <li class="d-flex">
                                         <div>
-                                            <span><i class="fas fa-briefcase font"></i></span>
+                                            <span><i class="fas fa-briefcase font50"></i></span>
                                         </div>
                                         <div class="ml-4">
                                             <p id="projects" class="monserrat font18" data-target="548">0</p>
-                                            <p class="monserrat font12 stats-font">Projects completed</p>
+                                            <p class="monserrat font12">Projects completed</p>
                                         </div>
                                     </li>
                                     <li class="d-flex">
                                         <div>
-                                            <span><i class="far fa-clock font"></i></span>
+                                            <span><i class="far fa-clock font50"></i></span>
                                         </div>
                                         <div class="ml-4">
                                             <p id="hours" class="monserrat font18" data-target="1475">0</p>
-                                            <p class="monserrat font12 stats-font">Working Hours</p>
+                                            <p class="monserrat font12">Working Hours</p>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-12 col-md-6">
-                                <ul class="list d-flex justify-content-around text-white">
+                                <ul class="list d-flex justify-content-around text-white text-uppercase">
                                     <li class="d-flex">
                                         <div>
-                                            <span><i class="far fa-star font"></i></span>
+                                            <span><i class="far fa-star font50"></i></span>
                                         </div>
                                         <div class="ml-4">
                                             <p id="feed" class="monserrat font18" data-target="612">0</p>
-                                            <p class="monserrat font12 stats-font">Positives Feedback</p>
+                                            <p class="monserrat font12">Positives Feedback</p>
                                         </div>
                                     </li>
                                     <li class="d-flex">
                                         <div>
-                                            <span><i class="far fa-heart font"></i></span>
+                                            <span><i class="far fa-heart font50"></i></span>
                                         </div>
                                         <div class="ml-4">
                                             <p id="clients" class="monserrat font18" data-target="735">0</p>
-                                            <p class="monserrat font12 stats-font">Happy Clients</p>
+                                            <p class="monserrat font12">Happy Clients</p>
                                         </div>
                                     </li>
                                 </ul>
@@ -231,9 +233,9 @@
                             </div>
                         </div>
                         <div id="video" class="col-12">
-<!--                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"-->
-<!--                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
-<!--                            </iframe>-->
+                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            </iframe>
                         </div>
                     </div>
                 </div>
