Add responsiv on skills section

--- a/index.html
+++ b/index.html
@@ -75,31 +75,33 @@
                     </div>
                 </div>
             </section>
-            <section id="skill-bar" class="grey">
-                <div class="d-flex justify-content-start">
-                    <div>
-                        <div id="progressBar"  class="">
-                            <h3 id="skills" class="font30 monserrat">Professional Skills</h3>
-                            <div class="text-uppercase">
-                                <p class="pro-skills font12 monserrat">ui/ux design <span class="ml-5">75%</span></p>
-                                <div class="progress-bar-grey">
-                                    <div id="ui"></div>
-                                </div>
-                                <p class="pro-skills font12 monserrat">web development <span class="ml-5">90%</span></p>
-                                <div class="progress-bar-grey">
-                                    <div id="develop"></div>
-                                </div>
-                                <p class="pro-skills font12 monserrat">marketing <span class="ml-5">65%</span></p>
-                                <div class="progress-bar-grey">
-                                    <div id="marketing"></div>
+            <section id="skills" class="grey">
+                <div id="content-skill" class="d-md-flex">
+                    <div id="progress-bar" class="">
+                        <div id="bars-sizes">
+                            <h2 class="monserrat font30">Professional Skills</h2>
+                            <div>
+                                <p class="text-uppercase">ui/ux <span class="ml-5 monserrat font12">75%</span></p>
+                                <div class="grey-bars">
+                                    <div class="blue-bars-ui"></div>
                                 </div>
                             </div>
+                            <div>
+                                <p class="text-uppercase">web development <span class="ml-5 monserrat font12">90%</span></p>
+                                <div class="grey-bars">
+                                    <div class="blue-bars-dev"></div>
+                                </div>
+                            </div>
+                            <div>
+                                <p class="text-uppercase">marketing <span class="ml-5 monserrat font12">65%</span></p>
+                                <div class="grey-bars">
+                                    <div class="blue-bars-mark"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-<!--                        <div id="img-container" class=" d-flex justify-content-end">-->
-<!--                            <div class="h-100">-->
-<!--                                <img id="skill-img" src="assets/images/skill/design.jpg" alt="Photo de design">-->
-<!--                            </div>-->
-<!--                        </div>-->
+                    <div id="img-div">
+                        <img src="assets/images/skill/design.jpg" alt="" id="img">
                     </div>
                 </div>
             </section>
@@ -232,11 +234,11 @@
                                 </p>
                             </div>
                         </div>
-                        <div id="video" class="col-12">
-                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"
-                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                            </iframe>
-                        </div>
+<!--                        <div id="video" class="col-12">-->
+<!--                            <iframe width="1140" height="570" src="https://www.youtube.com/embed/SBB1YtwODT0" frameborder="0"-->
+<!--                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
+<!--                            </iframe>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </section>
