--- a/index.html
+++ b/index.html
@@ -157,54 +157,42 @@
                     </div>
                 </div>
             </section>
-            <section>
-                <div class="d-flex flex-wrap">
-                    <div class="container-img">
-                        <img class="work-img" src="assets/images/work/photo1.png" alt="1st work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Project</button>
+            <section id="works">
+                <div class="d-flex h-100">
+                    <div id="first-part" class="w-100 w-md-50">
+                        <div class="h-50 d-flex">
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo1.jpg" alt="">
+                            </div>
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo2.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="h-50 d-flex">
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo5.jpg" alt="">
+                            </div>
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo6.jpg" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/services/photo2.png" alt="2nd work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Project</button>
+                    <div id="second-part" class="w-100 w-md-50">
+                        <div class="h-50 d-flex">
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo3.jpg" alt="">
+                            </div>
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo4.jpg" alt="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo3.png" alt="3rd work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Project</button>
-                        </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo4.png" alt="4th work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Project</button>
-                        </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo5.png" alt="5th work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Work</button>
-                        </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo6.png" alt="6th work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Work</button>
-                        </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo7.png" alt="7th work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Work</button>
-                        </div>
-                    </div>
-                    <div class="container-img">
-                        <img class="work-img" width="337" height="300" src="assets/images/work/photo8.png" alt="8th work">
-                        <div class="middle">
-                            <button class="font12 button-works" type="button">View Work</button>
+                        <div class="h-50 d-flex">
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo7.jpg" alt="">
+                            </div>
+                            <div class="w-50">
+                                <img class="h-100 w-100" src="assets/images/work/photo8.jpg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
