--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
                     <div class="col-5 mt-5">
                         <img src="assets/images/header/logo.png" alt="Logo de l'entreprise">
                     </div>
-                    <div class="col-7 mt-5">
-                        <nav>
-                            <ul class="d-flex justify-content-end nav text-uppercase">
-                                <li class="monserrat font12 nav-item active"><a class="nav-link" href="#">Home</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">About</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Work</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Process</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Services</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Testimonials</a></li>
-                                <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Contact</a></li>
-                            </ul>
+                    <div class="col-6 mt-5 p-0">
+                        <nav class="navbar navbar-expand-lg navbar-light offset-9 offset-sm-11 offset-md-3 p-0">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon justify-content-end"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                                <ul class="navbar-nav">
+                                    <li class="monserrat font12 nav-item active"><a class="nav-link" href="#">Home</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">About</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Work</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Process</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Services</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Testimonials</a></li>
+                                    <li class="monserrat font12 nav-item"><a class="nav-link" href="#">Contact</a></li>
+                                </ul>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -108,52 +114,50 @@
             <section id="skill" class="blue">
                 <div class="container">
                     <div class="row">
-<!--                        <div class="col-12">-->
-                            <div class="col-12 col-md-6">
-                                <ul class="list d-flex justify-content-around text-white text-uppercase">
-                                    <li class="d-flex">
-                                        <div>
-                                            <span><i class="fas fa-briefcase font50"></i></span>
-                                        </div>
-                                        <div class="ml-4">
-                                            <p id="projects" class="monserrat font18" data-target="548">0</p>
-                                            <p class="monserrat font12">Projects completed</p>
-                                        </div>
-                                    </li>
-                                    <li class="d-flex">
-                                        <div>
-                                            <span><i class="far fa-clock font50"></i></span>
-                                        </div>
-                                        <div class="ml-4">
-                                            <p id="hours" class="monserrat font18" data-target="1475">0</p>
-                                            <p class="monserrat font12">Working Hours</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-12 col-md-6">
-                                <ul class="list d-flex justify-content-around text-white text-uppercase">
-                                    <li class="d-flex">
-                                        <div>
-                                            <span><i class="far fa-star font50"></i></span>
-                                        </div>
-                                        <div class="ml-4">
-                                            <p id="feed" class="monserrat font18" data-target="612">0</p>
-                                            <p class="monserrat font12">Positives Feedback</p>
-                                        </div>
-                                    </li>
-                                    <li class="d-flex">
-                                        <div>
-                                            <span><i class="far fa-heart font50"></i></span>
-                                        </div>
-                                        <div class="ml-4">
-                                            <p id="clients" class="monserrat font18" data-target="735">0</p>
-                                            <p class="monserrat font12">Happy Clients</p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-<!--                        </div>-->
+                        <div class="col-12 col-md-6">
+                            <ul class="list d-flex justify-content-around text-white text-uppercase">
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="fas fa-briefcase font50"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="projects" class="monserrat font18" data-target="548">0</p>
+                                        <p class="monserrat font12">Projects completed</p>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-clock font50"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="hours" class="monserrat font18" data-target="1475">0</p>
+                                        <p class="monserrat font12">Working Hours</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <ul class="list d-flex justify-content-around text-white text-uppercase">
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-star font50"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="feed" class="monserrat font18" data-target="612">0</p>
+                                        <p class="monserrat font12">Positives Feedback</p>
+                                    </div>
+                                </li>
+                                <li class="d-flex">
+                                    <div>
+                                        <span><i class="far fa-heart font50"></i></span>
+                                    </div>
+                                    <div class="ml-4">
+                                        <p id="clients" class="monserrat font18" data-target="735">0</p>
+                                        <p class="monserrat font12">Happy Clients</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
